--- a/DocumentClassiication.ipynb
+++ b/DocumentClassiication.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "id": "87385857-507f-486b-8303-a9823df92010",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "id": "f914d475-4ac1-47a0-b07b-05a371d43899",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
        "[2676 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 50,
    "id": "c62f2310-913f-4f1f-9cb9-88c6373654dc",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "27987390-1e60-4fcb-aa33-0b2906178210",
    "metadata": {},
    "outputs": [],
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "id": "fbd4dff9-8a81-4caa-acdc-f83f29a261ce",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "id": "c2b6fd15-e290-4688-bfb8-d4bf688a9045",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "[2676 rows x 4 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "aff34271-7959-47d8-a341-0c1a860cf035",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "id": "dd02a516-9829-45a2-88af-b43577a98dac",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "})"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "id": "a5755468-61d1-41a1-a8b5-8ce04893b18e",
    "metadata": {},
    "outputs": [],
    "source": [
     "split_dataset = dataset.train_test_split(test_size=0.2, seed = 42)\n",
-    "train_text = split_dataset['train']\n",
-    "test_text = split_dataset['test']"
+    "train_texts = split_dataset['train']\n",
+    "test_texts = split_dataset['test']"
    ]
   },
   {
@@ -431,8 +431,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "af9c91a0-2d17-4c00-a6eb-834e7058797b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed97e3a994aa49b69134fa2cf9c66f32",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/2140 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48f33d8ea963494597ac475798a5ef05",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/536 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "# Initialize tokenizer\n",
+    "model_name = \"bert-base-uncased\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "# Define tokenization function\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"Cleaned Text\"], padding=\"max_length\", truncation=True, max_length=128)\n",
+    "\n",
+    "# Apply tokenization\n",
+    "train_dataset = train_texts.map(tokenize_function, batched=True)\n",
+    "test_dataset = test_texts.map(tokenize_function, batched=True)\n",
+    "\n",
+    "\n",
+    "# Set format for PyTorch\n",
+    "train_dataset.set_format(type=\"torch\", columns=[\"input_ids\", \"attention_mask\", \"label\"])\n",
+    "test_dataset.set_format(type=\"torch\", columns=[\"input_ids\", \"attention_mask\", \"label\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "4e83586f-032e-4497-bdc2-7abb08226b1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': tensor(2),\n",
+       " 'input_ids': tensor([  101, 16405, 11140,  3022,  2344,  2344,  8909,  2344,  3058,  7661,\n",
+       "          2171,  8746, 11387,  2418,  2692, 20958,  2683,  6285,  2050, 15214,\n",
+       "         21007,  5054,  4031,  4031,  8909,  4031, 24110,  3775,  3775,  3131,\n",
+       "          3976,  2484, 19739, 20486,  2050, 10392,  2050,  1022,  1018,  1019,\n",
+       "          5187,  9300,  2627,  2072,  1019,  3590,  1022,  3931,  1015,   102,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
+       "             0,     0,     0,     0,     0,     0,     0,     0]),\n",
+       " 'attention_mask': tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "         1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "         0, 0, 0, 0, 0, 0, 0, 0])}"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3be353e-5c6a-428e-8505-a5279d37620c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74c66a93-d452-4b40-adca-0f24f67fa407",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "545a89c2-2da9-45f2-8c2b-18d8fcdab5f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e729770d-fae7-494e-9cb9-26bce6feacd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca227cc-86fa-4795-bacb-8e478bb4cdb4",
    "metadata": {},
    "outputs": [],
    "source": []
